Remove soft delete fields and list option
